# 6th-grade-teks

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  demo_problems.py  frontend-ui-ux-spec.md  pyproject.toml  v1spec.md
api/: deps.py  main.py
api/routers/: __init__.py  attempts.py  items.py  progress.py
content/: teks_map.json
content/templates/: 6.2_rationals_ops.json  6.4_proportionality_unit_rate.json  6.7B_expr_vs_eq.json  6.8B_area_trapezoid.json  6.9A_one_step_equations.json
engines/: __init__.py  decorator_llm.py  grader.py  solver.py  svg_renderers.py  validators.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: HintModal.tsx  ItemPlayer.tsx  MasteryBar.tsx  MathText.tsx  SkillTile.tsx
frontend/src/services/: api.ts
frontend/src/state/: auth.ts  mastery.ts  practice.ts  settings.ts
scripts/: seed_items.py
services/: curriculum.py  item_factory.py  mastery.py  spaced_review.py
tests/: test_api_contracts.py  test_grader.py  test_solver.py
