[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teks-grade6-tutor"
version = "0.1.0"
description = "Teacher-free AI-generated & solver-graded 6th-grade TEKS math tutor"
authors = [{ name = "TEKS Tutor" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sympy>=1.13.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "pytest>=8.0.0"
]

[tool.setuptools]
packages = ["api", "api.routers", "engines", "services"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
